# stamp-de-tafels

./: .gitignore  LICENSE  Pipfile  pyproject.toml  readme.md
stamp_de_tafels/: __init__.py  start.py
